<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
          android:title="@string/str_new_gift"/>
    <item android:id="@+id/menu_auto_update"
          android:title="@string/menu_gr_auto">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/minute_one"
                      android:title="@string/menu_one"/>
                <item android:id="@+id/minute_five"
                      android:title="@string/menu_five"/>
                <item android:id="@+id/minute_sixty"
                      android:title="@string/menu_sixty"/>
                <item android:id="@+id/minute_always"
                      android:title="@string/menu_always"/>
            </group>
        </menu>
    </item>
</menu>