<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activity.LoginActivity">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:layout_alignParentEnd="true" android:visibility="invisible"/>
    </RelativeLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_login"
            android:id="@+id/user_name"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_login"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_pass"
            android:id="@+id/user_wish"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20sp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edit_pass"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sign_in"
                android:id="@+id/btn_sign_in"
                android:layout_weight="1"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_exit"
                android:id="@+id/btn_exit"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>