<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/home_items"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/image_user_avatar"
                android:layout_margin="3dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/str_user_name"
                android:id="@+id/text_who_post"
                android:gravity="center|start"
                android:textColor="@color/gray"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/str_date"
                android:id="@+id/text_date_post"
                android:gravity="center|end"
                android:layout_marginRight="5dp"
                android:textColor="@color/gray"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_title"
                android:id="@+id/text_title"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_gift"
                android:layout_margin="2dp"
                android:scaleType="fitStart"
                android:cropToPadding="false"
                android:adjustViewBounds="true"/>
        <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:id="@+id/like_and_obscene"
                android:layout_height="fill_parent">
            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/image_like"
                    android:src="@drawable/heart"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true" android:scaleType="centerInside"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_count_like"
                    android:id="@+id/count_like"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/image_like"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
        </RelativeLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_desc"
                android:id="@+id/text_desc"/>
    </LinearLayout>
</LinearLayout>