<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
              android:layout_height="fill_parent" tools:context=".activity.NewGift">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:id="@+id/content_image_or_place"
            android:layout_height="wrap_content">
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/content_image_or_place">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_title"
                android:id="@+id/user_name" android:layout_alignParentStart="false" android:layout_alignParentEnd="false"
                android:textStyle="bold"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_title"
                android:layout_below="@+id/user_name"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_desc"
                android:id="@+id/user_wish" android:layout_below="@+id/editText" android:textStyle="bold"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edit_desc"
                android:layout_below="@+id/user_wish"
                android:layout_above="@+id/linearLayout"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_done"
                android:id="@+id/btn_done"
                android:layout_weight="1"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_close"
                android:id="@+id/btn_close"
                android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>